ingres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress

spec:
  type: NodePort
  selector:
    name: nginx-ingress
  ports:
    - name: http
      targetPort: 80
      port: 80
      protocol: TCP
    - name: https
      targetPort: 443
      port: 443
      protocol: TCP

---
apiVersion: extensions/v1beta1
kind:
