voting-app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: voting-app-service
  labels:
    name: voting-app-pod
    app: demo-voting-app

spec:
  type: NodePort
  selector:
    name: voting-app-pod
    app: demo-voting-app
  ports:
    - targetPort: 80
      port: 80
